graphql-parser/tests/snapshots/tests__extend_scalar__parse_schema__win.snap
---
source: graphql-parser/tests/tests.rs
expression: "format!(\"{}\\n---\\n{:#?}\", & input, & result)"
---
extend scalar CustomScalar @onScalar

---
Ok(
    Document {
        definitions: [
            TypeExtension(
                Scalar(
                    ScalarTypeExtension {
                        position: Pos(1:8),
                        name: "CustomScalar",
                        directives: [
                            Directive {
                                position: Pos(1:28),
                                name: "onScalar",
                                arguments: [],
                            },
                        ],
                    },
                ),
            ),
        ],
    },
)
